[gd_scene format=3 uid="uid://xtcbu6i16n8w"]

[ext_resource type="Script" uid="uid://sm3itux66ugp" path="res://src/UI/level_end_screen.gd" id="1_f2mfd"]
[ext_resource type="Theme" uid="uid://cqhr5fh3a87eo" path="res://res/resources/hud_theme.tres" id="1_xa1ef"]
[ext_resource type="FontFile" uid="uid://dy5nck5nktf0g" path="res://res/fonts/visitor1.ttf" id="3_oqtbo"]

[node name="LevelEndScreen" type="Control" unique_id=1976248465]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xa1ef")
script = ExtResource("1_f2mfd")

[node name="Background" type="ColorRect" parent="." unique_id=1562913537]
z_index = -1
layout_mode = 0
offset_left = 33.0
offset_top = 45.0
offset_right = 542.0
offset_bottom = 607.0
color = Color(0.3, 0.3, 0.3, 0.84705883)

[node name="LevelCompleteLabel" type="RichTextLabel" parent="." unique_id=187429948]
layout_mode = 0
offset_left = 53.0
offset_right = 629.0
offset_bottom = 162.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/normal_font_size = 32
text = "LEVEL COMPLETE"
vertical_alignment = 1

[node name="Score" type="RichTextLabel" parent="." unique_id=1642426405]
layout_mode = 0
offset_left = 53.0
offset_top = 162.0
offset_right = 576.0
offset_bottom = 182.0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "SCORE: 123456"
fit_content = true
scroll_active = false

[node name="Time" type="RichTextLabel" parent="." unique_id=533013160]
layout_mode = 0
offset_left = 53.0
offset_top = 186.0
offset_right = 576.0
offset_bottom = 206.0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "TIME: 1:23"
fit_content = true
scroll_active = false

[node name="Drums" type="RichTextLabel" parent="." unique_id=1390533372]
layout_mode = 0
offset_left = 53.0
offset_top = 210.0
offset_right = 576.0
offset_bottom = 230.0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "GREASE DRUMS: 25/25"
fit_content = true
scroll_active = false

[node name="RankLabel" type="RichTextLabel" parent="." unique_id=959275540]
layout_mode = 0
offset_left = 53.0
offset_top = 393.0
offset_right = 576.0
offset_bottom = 416.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "RANK:"

[node name="RankLetter" type="RichTextLabel" parent="." unique_id=184689679]
layout_mode = 0
offset_left = 150.0
offset_top = 272.0
offset_right = 341.99847
offset_bottom = 527.99695
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = ExtResource("3_oqtbo")
theme_override_font_sizes/normal_font_size = 282
text = "b"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="." unique_id=17317449]
layout_mode = 0
offset_left = 53.0
offset_top = 550.0
offset_right = 189.0
offset_bottom = 575.00037
text = "CONTINUE"

[node name="Timers" type="Node" parent="." unique_id=714477570]
